# pyprexor

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  tests.yml
datastore/: mongo_datastore.py
example_app/: example.py  main.py
example_app/tests/: test_example.py
proc_ex/: main.py
pyprexor/: __init__.py  core.py  datastore.py  docstring_parse.py
pyprexor/tests/: test_core.py  test_datastore.py  test_in_memory_datastore.py
pyprexor_datastore/: datastore.py  mongo.py
tests/: test_core.py  test_datastore.py  test_example.py  test_in_memory_datastore.py  test_mongo_datastore.py
