[tool.poetry]
name = "pyprexor"
version = "0.0.0"
description = ""
authors = ["_MircoWave_ <clarknick1990@gmail.com>"]
readme = "README.md"
packages = [{include = "pyprexor"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.285"
mypy = "^1.5.1"
coverage = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
