[tool.poetry]
name = "pyprexor"
version = "0.0.0"
description = "Python process executor"
authors = ["NickSebClark <clarknick1990@gmail.com>"]
readme = "README.md"
packages = [{include = "pyprexor"}, {include = "pyprexor_datastore"}]
repository = "https://github.com/NickSebClark/pyprexor"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.285"
mypy = "^1.5.1"
coverage = "^7.3.0"
mongomock = "^4.1.2"


[tool.poetry.group.mongo.dependencies]
pymongo = "^4.5.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 120